--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,8 @@ http {
     upstream randoms {
         server 127.0.0.1:8082;
         server 127.0.0.1:8083;
+        server 127.0.0.1:8084;
+        server 127.0.0.1:8085;
     }
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
